content/documentation/mocha/4.1.3/UserGuide/en_US/03_newproject.adoc

== Starting a New Project

=== Workflow inside mocha

Mocha workflow is designed around a project structure.  It is good practice to only work on one shot per project file to minimize layer management and to keep the work streamlined.

.The basic tracking workflow for mocha is:

. Import your footage		
. Draw a loose spline around the shape you want to track
. Track the spline	
. Set the 'Surface', or corner pin where you want the inserted image	
. Adjust your track if necessary
. Export the completed track

.The basic rotoscoping workflow is very similar:

. Import your footage		
. Draw a loose spline around the shape you want to track. 		
. Track the spline		
. Adjust your track if necessary		
. Add new shapes for rotoscoping and link them to your track	
. Adjust shapes where necessary	
. Export the rendered mattes or the shape data
		

=== Creating a New Project

When you start the application you are presented with an empty workspace. No footage is loaded and most of the controls are consequently disabled. 
To begin working, you must open an existing project or start a new project.

image://borisfx-com-res.cloudinary.com/image/upload/v1531777181/documentation/mocha/images/4.1.3/MENU_NewProject_001.jpg[]		

Select the clip to import by clicking on the Choose... button to the right of the top line. This will bring up a file browser, where you can select almost any industry standard file formats. Image sequences will show up as individual frames. You can select any one of the frames and the application will automatically sequence the frames as a clip when importing.

image://borisfx-com-res.cloudinary.com/image/upload/v1531777181/documentation/mocha/images/4.1.3/NewProjectDialog_001.jpg[width="60%"]	

*Name*
 
A project name will automatically be generated based on the filename of the imported footage, but you can change it by editing the Name field. 


*Location*
 
Your project file and cache files will output to a directory called &ldquo;Results&rdquo; by default. This is created in the same folder your clip is imported from. You can change this using the Change... button or using the dropdown box to set a different relative or absolute path. 


*Frame Range*
 
The range of frames to import.  We recommend to only work with the frames you need, rather than importing very large clips or multiple shots edited together. 

*Frame offset*
 
This is set to the starting frame number or timecode by default.  You can also define a fixed frame (You can set a default for the fixed frame in Preferences)
You also have the option to view as Timecode or Frame numbers. If your clip has an embedded timecode offset and you switch to Timecode, the offset will be used in your project. 


*Frame Rate*
 
Normally this is automatically detected, but you have options to adjust if necessary. Make sure you check the frame rate before you close the New Project dialog. 


*Separate Fields*
 
If you are using interlaced footage, set your field separation here to Upper or Lower. Make sure you check your fields match your footage before you close the New Project dialog.  If you don't set them correctly, you cannot modify them and will have to restart the project.  


*Remove Pulldown*
 
If your footage has pulldown, set it here.

==== Advanced options

image://borisfx-com-res.cloudinary.com/image/upload/v1531777181/documentation/mocha/images/4.1.3/NewProjectAdvanced_001.jpg[width="60%"]		


*Caching*
 
If you wish the clip to be cached into memory, check the Cache clip checkbox here. Caching is recommended if you are working a computer that has fast local storage, but your shot is stored in a slow network location. If your shot is already stored on fast storage, you don't need to cache.  More often than not, you can leave this setting off. 


*Color space*
 
Set to Linear, Log and Panalog.  


*Conversion*
 
Set to None, Float or 8-Bit 


*Offset*
 
If working with log color space, set any offset here. 


*Soft clip*
 
If working with log color space, set soft clip value here. Default is zero making falloff linear, rather than curved. 


*Log reference black*

If working with log color space, set white reference value here. 


*Log reference black*

If working with log color space, set black reference value here.


*Gamma*
 
If working with log color space, you can adjust Gamma here.

=== Setting Up a New Project For Stereo

When you start a New Project you are also presented with the option of creating a multiview project in the Views tab.

image://borisfx-com-res.cloudinary.com/image/upload/v1531777181/documentation/mocha/images/4.1.3/4.0.0_NewProject.jpg[width="60%"]

If you check *Multiview project* you are then presented with the view names and their abbreviated names.
The abbreviated name is used in the interface for the view buttons, but is also used as the suffix for renders.
You can also choose the hero view.  By default this is the left.  Defining a hero eye determines the tracking and roto order for working in the views.

If you want to define the footage for both views, you can add additional footage streams view the *Add* button below the initial clip chooser.

image://borisfx-com-res.cloudinary.com/image/upload/v1531777181/documentation/mocha/images/4.1.3/4.0.0_NewProject_AddStream.jpg[width="60%"]

If you forget to set up Multiview when you start a new project, you can set it in the new Project Settings Dialog from the File menu.

Once you are in Multiview mode, you will see a colored border around the viewer based on the current view you are in.  
This is to help artists to identify which view they are currently in without having to refer to the buttons

You can switch between Views by pressing the corresponding L|R buttons in the view controls, or using the default 1 and 2 keys on the keyboard.

=== Setting the In and Out Points
		
image://borisfx-com-res.cloudinary.com/image/upload/v1531777181/documentation/mocha/images/4.1.3/Timeline_001.jpg[]			

If you will only be working on a section of the shot you can use the In and Out points to set the range on the timeline. Note that the In and Out points affect the range of the Überkey button. You can zoom the timeline to only show you the part between you In and Out points by clicking the Zoom Timeline button.



=== Tips for New Projects

*Only import as much as you need*
 
Working with very long files can be time consuming for the artist and can slow down the tracking as it searches for more frames.  Try to only use what you need, and work on individual shots, rather than multiple shots in one piece of footage. 



*Frame rate, dimensions and pixel aspect ratio are important*
 
Make sure these values match the settings in your compositor or editor, otherwise tracking and shape data will not match when you export it. 



*If you are unsure which field your interlaced footage is in, import it and check*
 
If you quickly start your project with a guessed field order, you can check to make sure it is correct by using the right arrow key to step through the footage.  If you footage stutters or steps back a frame while you're stepping through, it is probably in the wrong field order, or you may have to set pulldown. 



*Try to avoid interlaced footage where possible*
 
Interlaced footage is painful to work with.  For your own sanity, try not to use it unless you have to!

